--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Poc</title>
-  <base href="/">
+  <title>PoC: angular.js + Angular 10</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="ajs/bundle.js"></script>
@@ -11,9 +10,9 @@
 <body>
   <div ng-controller="MainCtrl">
     {{ title }}
-    <button ng-click="sayHi()">Say Hi!</button>
     <button ng-click="navigateAjs()">Navigate Angular.JS</button>
     <button ng-click="navigateA10()">Navigate Angular 10</button>
+    <a href="#/angular10/feature-2">Navigate via href</a>
     <ui-view></ui-view>
   </div>
 </body>
