single ownership sibling outlet routing

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     {{ title }}
     <button ng-click="navigateAjs()">Navigate Angular.JS</button>
     <button ng-click="navigateA10()">Navigate Angular 10</button>
-    <a href="#/angular10/feature-2">Navigate via href</a>
-    <ui-view></ui-view>
+    <a href="#/feature-2">Navigate via href</a>
+    <poc-app></poc-app>
   </div>
 </body>
 </html>
