cross angular routing

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
     {{ title }}
     <button ng-click="navigateAjs()">Navigate Angular.JS</button>
     <button ng-click="navigateA10()">Navigate Angular 10</button>
-    <a href="#/feature-2">Navigate via href</a>
+    <a href="#/feature-2">Regular link</a>
+    <a ui-sref="ajs">UI Router state link</a>
     <poc-app></poc-app>
   </div>
 </body>
